--- a/SHT21.X/nbproject/Makefile-genesis.properties
+++ b/SHT21.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Wed Jan 08 22:49:19 CET 2025
+#Sun Jan 12 14:15:51 CET 2025
 SHT21.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=5b9902b017a30efdeb77dee75a1e4e51
 conf.ids=SHT21
 SHT21.Pack.dfplocation=/opt/microchip/mplabx/v6.20/packs/Microchip/PIC18F-K_DFP/1.13.292
-host.id=tlbi-8fg4-c
+host.id=2ci7-di57-24
 configurations-xml=2dab9a3329f88cd97447c5f7d2c28d20
 SHT21.languagetoolchain.dir=/opt/microchip/xc8/v2.50/bin
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
