--- a/SHT21.X/nbproject/private/SuppressibleMessageMemo.properties
+++ b/SHT21.X/nbproject/private/SuppressibleMessageMemo.properties
@@ -1,3 +1,4 @@
 #
-#Tue Dec 31 12:14:03 CET 2024
+#Sun Jan 12 23:11:45 CET 2025
 pk3/CHECK_4_HIGH_VOLTAGE_VPP=true
+mdbDebugger/NO_HW_BP_RESOURCES_WARN=true
