Feature add exercises (#4)
* implement functionality to measure and print TEMPERATURE, HUMIDITY, and TEMP_HUMIDITY

* finish SHT21_lib

* code clean up main_sht21.c

* add Aufgabenstellung

--- a/SHT21.X/nbproject/Makefile-genesis.properties
+++ b/SHT21.X/nbproject/Makefile-genesis.properties
@@ -1,10 +1,10 @@
 #
-#Wed Jan 08 22:49:19 CET 2025
+#Mon Jan 13 08:57:52 CET 2025
 SHT21.com-microchip-mplab-mdbcore-PICKit3Tool-PICkit3DbgToolManager.md5=5b9902b017a30efdeb77dee75a1e4e51
 conf.ids=SHT21
 SHT21.Pack.dfplocation=/opt/microchip/mplabx/v6.20/packs/Microchip/PIC18F-K_DFP/1.13.292
-host.id=tlbi-8fg4-c
-configurations-xml=2dab9a3329f88cd97447c5f7d2c28d20
+host.id=tblc-ni5g
+configurations-xml=97cdddae68b7bf87e2c77212e4856459
 SHT21.languagetoolchain.dir=/opt/microchip/xc8/v2.50/bin
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=f612087c95360c842296d189edfe3321
 proj.dir=/home/basti/Lehre/\u00B5C/Project/SHT21/SHT21.X
